--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyD0YT3u-r7R53h2rtPO0FYMM1rrv9Xbl4M",
-      authDomain: "ordem-ficha.firebaseapp.com",
-      projectId: "ordem-ficha",
-      storageBucket: "ordem-ficha.appspot.com",
-      messagingSenderId: "543944476352",
-      appId: "1:543944476352:web:56edc79e7af373b5354f25"
+      apiKey: "AIzaSyBwLPYiq73FcT2tg695qvwe9ctPzO-thXE",
+      authDomain: "ficharpg-6422f.firebaseapp.com",
+      projectId: "ficharpg-6422f",
+      storageBucket: "ficharpg-6422f.appspot.com",
+      messagingSenderId: "750013783815",
+      appId: "1:750013783815:web:b680a94bee2cc399a22fa2"
     };
 
     // Initialize Firebase
